examples/eks-managed-node-group/ingress/glwcall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-glwcall
  namespace: glw
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: prod-alpha-07
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-1-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:975049889333:certificate/3e067007-ca14-44ec-98e9-79d26696f535
spec:
  ingressClassName: alb
  rules:
  - host: api.glwcall.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glw-call-api-svc
            port:
              number: 80
  - host: glwcall.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glw-call-web-svc
            port:
              number: 80
  - host: www.glwcall.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glw-call-web-svc
            port:
              number: 80
  - host: test.glwcall.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glw-call-web-test-svc
            port:
              number: 80
  - host: grafana.glwcall.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-glw
            port:
              number: 80
  - host: leads.glwcall.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glw-bridge-svc
            port:
              number: 80
